# HelmiesAgents

./: .gitignore  AGENTS.md  README.md  policy.execution.yaml  pyproject.toml
.github/workflows/: quality-gates.yml
docs/: ARCHITECTURE.md  BRIEF_EXECUTION_SPEC.md  COMPETITIVE_ANALYSIS.md  DEPLOYMENT_BLUEPRINTS.md  DIRECTIONS.md  PHASES_COMPLETION_REPORT.md  REPO_STUDY_FULL.md  TODO_DETAILED.md  VISION.md
evals/: suites.yaml
examples/workflows/: research_and_report.yaml
helmiesagents/: cli.py  config.py  main.py  models.py  workforce.py
helmiesagents/api/: server.py
helmiesagents/approvals/: manager.py
helmiesagents/benchmark/: harness.py
helmiesagents/context/: compression.py
helmiesagents/core/: agent.py  critic.py  planner.py
helmiesagents/enterprise/: compliance.py
helmiesagents/execution/: async_runner.py  budget.py  sqlite_queue.py
helmiesagents/gateways/: base.py  discord.py  router.py  slack.py  telegram.py  whatsapp.py
helmiesagents/marketplace/: skills.py
helmiesagents/memory/: store.py
helmiesagents/providers/: base.py  factory.py  mock.py  openai_compatible.py
helmiesagents/routing/: model_router.py
helmiesagents/scim/: service.py
helmiesagents/security/: auth.py  policy.py  sso.py  vault.py
helmiesagents/web/: index.html
tests/: test_agent.py  test_auth_and_rbac.py  test_autonomous_subruns.py  test_benchmark.py  test_budget_api.py  test_critic_loop.py  test_eval_gates.py  test_execution_budgets.py  test_gateway.py  test_memory.py  test_policy_dsl.py  test_queue.py  test_scim.py  test_slack_oauth_wizard.py  test_sso.py  test_streaming.py  test_vault.py  test_web_budget_panel.py  test_workflow.py  test_workforce.py  test_workforce_agent_model_settings.py  test_workforce_kanban_dnd_ui.py  test_workforce_scheduler.py
(+11 files in other folders)
